[project]
name = "adsp32029"
version = "2025.0.0"
description = "The Jupyter Book for the ADSP 32029: Causal Models in Data Science course at the University of Chicago. Serving as the primary resource for lectures, tutorials, and assignments, this book is structured around the CausalML Book by Chernozhukov, Hansen, Kallus, Spindler, and Syrgkanis."
readme = "README.md"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter-book>=1.0.4.post1",
]
requires-python = ">= 3.9"
